--- a/Syntax.html
+++ b/Syntax.html
@@ -12,7 +12,7 @@
         var y;
         y = "kawsar";
         document.write(y);
-        document.write("<br>");
+        document.write("<br>"); 
         document.write(x);
         // alert("my number is" + x);
         // alert("hello world");
@@ -23,4 +23,5 @@
     </script>
     
 </body>
+<script src="first.js"></script>
 </html>   
