--- a/table-with.html
+++ b/table-with.html
@@ -8,7 +8,7 @@
     <style>
         table,
         td, th{
-            border: 1px #000;
+            border: 1px #000 solid;
             background-color: green;
             border-collapse: collapse;
         }
