--- a/registration-form-with-checkbox.html
+++ b/registration-form-with-checkbox.html
@@ -50,7 +50,14 @@
           <option value="Rangpur">Rangpur</option>
           <option value="Mymensingh">Mymensingh</option>
         </select>
-      </div>
+      </div> <br>Address <br>
+      <textarea name="address" id="" placeholder="Enter your address"></textarea> <br>
+      Skills: <br>
+      <input type="checkbox" name="html" value="html">HTML
+      <input type="checkbox" name="html" value="css">CSS
+      <input type="checkbox" name="html" value="javascript">javascript
+      <input type="checkbox" name="html" value="php">PHP
+      <input type="checkbox" name="html" value="mysql">mysql
 
       <br />
       <!-- Submit -->
