--- a/registration-form-with-checkbox.html
+++ b/registration-form-with-checkbox.html
@@ -53,11 +53,11 @@
       </div> <br>Address <br>
       <textarea name="address" id="" placeholder="Enter your address"></textarea> <br>
       Skills: <br>
-      <input type="checkbox" name="html" value="html">HTML
-      <input type="checkbox" name="html" value="css">CSS
-      <input type="checkbox" name="html" value="javascript">javascript
-      <input type="checkbox" name="html" value="php">PHP
-      <input type="checkbox" name="html" value="mysql">mysql
+      <input type="checkbox" name="skills[]" value="html">HTML
+      <input type="checkbox" name="skills[]" value="css">CSS
+      <input type="checkbox" name="skills[]" value="javascript">javascript
+      <input type="checkbox" name="skills[]" value="php">PHP
+      <input type="checkbox" name="skills[]" value="mysql">mysql
 
       <br />
       <!-- Submit -->
@@ -85,7 +85,10 @@
           <strong>Gender:</strong> ${gender}<br />
           <strong>District:</strong> ${district}
         `;
+        document
+
       }
     </script>
+
   </body>
 </html>
