--- a/29-10-25/trial.html
+++ b/29-10-25/trial.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-      
-      
-    </script>
+    <h3>Document form</h3>
+  <form action="" name="myform"> 
+    <input type="text" name="fullname" placeholder="Enter your name"><br><br>
+    <input type="number" name="contract" placeholder="Enter your number"> <br>
+    <textarea name="" id=""></textarea>
+  </form>
 </body>
 </html>
