--- a/29-10-25/prime.html
+++ b/29-10-25/prime.html
@@ -8,25 +8,21 @@
 <body>
     <h3>Prime number</h3>
     <script>
-     
-    
 let num = Number(prompt("Enter a number"));
-
-function isPrime(num) {
-    if (num <= 1) {
-        return num + " is not a prime number";
+function isPrime(num){
+    if(num <=1){
+        return + " is not a prime number";
     }
-    if (num === 2) {
-        return num + " is a prime number";
+     if(num == 2){
+        return  num+ " is a prime number";
     }
-    for (let i = 2; i < num; i++) {
-        if (num % i === 0) {
-            return num + " is not a prime number";
+    for(let i = 2; i <= num; i++){
+        if(num % i == 0){
+            return  num+ " is not a prime number";
         }
     }
     return num + " is a prime number";
 }
-
 document.write(isPrime(num));
 </script>
 
